// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gyEloo cZZASe sc-gjNGvZ fRMKrX"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 emQtGG"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egEGyE StyledRadioButton-g1f6ld-5 GyPly"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kGVKvV"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bpraBj StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 ddKqQo"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 fRgixr"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gyEloo eviQwS sc-gjNGvZ fRMKrX"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 emQtGG"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egEGyE StyledRadioButton-g1f6ld-5 GyPly"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kGVKvV"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 duXWYD StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 ddKqQo"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gyEloo eviQwS sc-gjNGvZ fRMKrX"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 gotIej"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egEGyE StyledRadioButton-g1f6ld-5 GyPly"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kVpJxN"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 duXWYD StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 ddKqQo"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
